SERVER-37929 reload ShardRegistry on config servers on rollback